--- a/NetNotes/appsettings.json
+++ b/NetNotes/appsettings.json
@@ -1,12 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=NetNotes;Trusted_Connection=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "NetNotesContextConnection": "Server=localhost;Database=NetNotes;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "NetNotesContextConnection": "Server=localhost;Database=NetNotes;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
 }
